syntax = "proto3";

package model;

import "google/protobuf/timestamp.proto";

option java_package = "br.com.rh.proto";
option java_multiple_files = true;


message AsoRequest {
  int64 employeeId = 1;
}

message AsoResponse {
  int64 employeeId = 1;
  string localization = 2;
  google.protobuf.Timestamp when = 3;
}