syntax = "proto3";

package service;
import "model/aso.proto";
option java_package = "br.com.rh.proto.service";
option java_multiple_files = true;

service AsoService {
  //bidirectional streaming
  rpc scheduleAso(stream model.AsoRequest) returns (stream model.AsoResponse);
}